# sleepworker-0.9

./: INSTALL  Makefile  Makefile.in  clear_dir.sh  config.status  configure  configure.ac
autom4te.cache/: output.0  output.2  traces.0  traces.1  traces.2  traces.3
debian/: README.source  changelog  control  copyright  rules
doc/: AUTHORS  COPYING  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README
examples/: Makefile  Makefile.am  Makefile.in  inputfile
man/: Makefile  Makefile.am  Makefile.in  sleepworker.8
misc/: checkroot.c  test  testskript.sh
nbproject/: Package-Default.bash  configurations.xml  project.xml
scripts/: Makefile  Makefile.in
src/: .goutputstream-OFMYZV  Makefile  Makefile.am  Makefile.in  eventwatch.c  eventwatch.h  initSleepworker.c  initSleepworker.h  sleepworker.c  sleepworker.h
src/.deps/: eventwatch.Po  initSleepworker.Po  sleepworker.Po
src/nbproject/: configurations.xml
