# what flags you want to pass to the C compiler & linker
#CFLAGS =
#LDFLAGS =

# this lists the binaries to produce, the (non-PHONY, binary) targets in
# the previous manual Makefile
bin_PROGRAMS = sleepworker
sleepworker_SOURCES = sleepworker.c sleepworker.h eventwatch.c eventwatch.h initSleepworker.c initSleepworker.h

# Origin makefile
#OBJ = sleepworker.o eventwatch.o initSleepworker.o

#prog: $(OBJ)
#	$(CC) $(CFLAGS) -o sleepworker $(OBJ) $(LDFLAGS)

#%.o: %.c
#	$(CC) $(CFLAGS) -c $<

